# pitchstems

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-audit.yml  ml-dependencies.yml
constraints/: windows-cpu.txt  windows-dev.txt  windows-gpu.txt
docs/: source-separation-research.md
docs/architecture/: adr-0001-product-architecture-direction.md  native-job-cancellation.md  product-architecture.md  quality-gate-roadmap.md
docs/superpowers/plans/: 2026-06-07-audit-fixes.md  2026-06-07-audit-repair-campaign.md  2026-06-07-remaining-audit-fixes.md  2026-06-08-audit-followup-hardening.md  2026-06-08-ci-quality-and-modularity-fixes.md  2026-06-08-complete-audit-repair-campaign.md  2026-06-08-core-stem-and-path-safety.md  2026-06-08-gui-job-lifecycle-and-cancellation.md  2026-06-08-gui-responsiveness-and-input-validation.md  2026-06-08-main-window-controller-extraction.md  2026-06-08-music-analysis-modularity-and-performance.md  2026-06-08-native-job-process-cancellation.md  2026-06-08-pipeline-reliability-and-preflight.md  2026-06-08-preflight-quality-gate-expansion.md  2026-06-08-project-health-gates-and-reproducibility.md  2026-06-08-timeline-performance-hardening.md  2026-06-08-ui-layout-and-visual-regression.md  2026-06-08-ui-runtime-hardening-campaign.md
scripts/: check.ps1  create-windows-shortcuts.ps1  generate_app_icon.py  ml_import_smoke.py  real_audio_smoke.ps1  refresh_constraints.py  setup-windows-gpu.ps1
src/pitchstems/: __init__.py  acceleration.py  app.py  app_identity.py  app_logging.py  audio.py  audio_clip.py  chord_analysis.py  chord_detection.py  chord_explanation.py  chord_gap_analysis.py  chord_naming.py  chord_preview.py  chord_regions.py  chord_scoring.py  cli.py  doctor.py  editor_chord_assignment.py  editor_chord_navigation.py  editor_loader.py  editor_models.py  editor_playback.py  editor_project.py  editor_query.py  editor_review_target.py  editor_state.py  evidence_display.py  export_files.py  file_opening.py  filename_safety.py  gui_editor_actions.py  gui_editor_load.py  gui_editor_model.py  gui_editor_page.py  gui_editor_state.py  gui_entry.py  gui_export.py  gui_harmony_dialogs.py  gui_harmony_flow.py  gui_helpers.py  (+53 more)
src/pitchstems/assets/: __init__.py
tests/: test_app_identity.py  test_app_logging.py  test_architecture_boundaries.py  test_audio.py  test_audio_clip.py  test_chord_analysis.py  test_chord_preview.py  test_chord_regions.py  test_cli.py  test_doctor.py  test_editor_chord_assignment.py  test_editor_chord_navigation.py  test_editor_loader.py  test_editor_models.py  test_editor_playback.py  test_editor_project.py  test_editor_query.py  test_editor_review_target.py  test_editor_state.py  test_evidence_display.py  test_export_files.py  test_file_opening.py  test_filename_safety.py  test_gui_editor_actions.py  test_gui_editor_load.py  test_gui_editor_model.py  test_gui_editor_page.py  test_gui_editor_state_assignment.py  test_gui_export.py  test_gui_helpers.py  test_gui_import_clip.py  test_gui_jobs.py  test_gui_layout_policy.py  test_gui_options.py  test_gui_pipeline_model.py  test_gui_pipeline_state.py  test_gui_processing.py  test_gui_project_flow.py  test_gui_shutdown.py  test_gui_theme.py  (+34 more)
