[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pitchstems"
version = "0.1.0"
description = "Local-first stem separation and MIDI transcription using open source models."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
authors = [
  { name = "PitchStems contributors" }
]
keywords = ["audio", "midi", "source-separation", "music-information-retrieval", "basic-pitch", "bs-roformer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mido>=1.3.2",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]
ml = [
  "bs-roformer-infer>=0.1.1,<0.2",
  "basic-pitch>=0.4.0",
]
win-gpu = [
  "bs-roformer-infer>=0.1.1,<0.2",
  "basic-pitch>=0.4.0",
  "onnxruntime-gpu[cuda,cudnn]>=1.23.2,<1.24",
  "torch>=2.11,<2.12",
]
cpu = [
  "bs-roformer-infer>=0.1.1,<0.2",
  "basic-pitch>=0.4.0",
]
dev = [
  "build>=1.2",
  "mypy>=1.15",
  "pip-audit>=2.9",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.6",
  "vulture>=2.16",
]

[project.scripts]
pitchstems = "pitchstems.cli:main"

[project.gui-scripts]
pitchstems-gui = "pitchstems.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchstems"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = [
  "src/pitchstems/editor_models.py",
  "src/pitchstems/export_files.py",
  "src/pitchstems/gui_editor_model.py",
  "src/pitchstems/gui_jobs.py",
  "src/pitchstems/gui_layout_policy.py",
  "src/pitchstems/gui_pipeline_model.py",
  "src/pitchstems/input_validation.py",
  "src/pitchstems/pipeline.py",
  "src/pitchstems/preflight.py",
  "src/pitchstems/project_store.py",
  "src/pitchstems/recent_projects.py",
  "src/pitchstems/timeline_render_policy.py",
  "src/pitchstems/time_format.py",
]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
